# cicest

./: .clang-tidy  .gitignore  BATCH2_PROMPT.md  BATCH3_PROMPT.md  CI.md  CLAUDE.md  CMakeLists.txt  LICENSE-APACHE  README.md  flake.nix  foo
compiler/: CMakeLists.txt  README.md
compiler/cstc/: CMakeLists.txt  README.md  main.cpp
compiler/cstc/include/cstc/: linker_selection.hpp
compiler/cstc/src/: main.cpp
compiler/cstc/tests/: linker_selection.cpp
compiler/cstc_ast/: CMakeLists.txt  README.md
compiler/cstc_ast/include/cstc_ast/: ast.hpp  ast_fwd.hpp  expr.hpp  generics.hpp  item.hpp  keyword.hpp  node_id.hpp  pat.hpp  printer.hpp  printer_impl.hpp  stmt.hpp  symbol.hpp  token_kind.hpp  token_types.hpp  type.hpp
compiler/cstc_ast/tests/: ast_basic.cpp  ast_printer.cpp  printer_basic.cpp  printer_full.cpp  single_character.cpp  symbol_intern.cpp
compiler/cstc_cli_support/: CMakeLists.txt  README.md
compiler/cstc_cli_support/include/cstc_cli_support/: support.hpp
compiler/cstc_codegen/: CMakeLists.txt  README.md
compiler/cstc_codegen/include/cstc_codegen/: codegen.hpp
compiler/cstc_codegen/src/: codegen.cpp
compiler/cstc_codegen/tests/: codegen_basic.cpp  codegen_control_flow.cpp  codegen_exprs.cpp  codegen_extern.cpp  codegen_integration.cpp  codegen_native_artifacts.cpp  codegen_types.cpp
compiler/cstc_hir/: CMakeLists.txt
compiler/cstc_hir/include/cstc_hir/: hir.hpp  printer.hpp
compiler/cstc_hir/tests/: hir_module_printer.cpp  hir_printer.cpp  hir_type_contract_printer.cpp
compiler/cstc_hir_builder/: CMakeLists.txt
compiler/cstc_hir_builder/include/cstc_hir_builder/: builder.hpp
compiler/cstc_hir_builder/tests/: hir_builder_constructor_positional.cpp  hir_builder_contract_blocks.cpp  hir_builder_empty_with.cpp  hir_builder_expr_fallbacks.cpp  hir_builder_function_shape.cpp  hir_builder_item_stmt.cpp  hir_builder_items_raw.cpp  hir_builder_member_ops.cpp  hir_builder_modules.cpp  hir_builder_prefix_contracts.cpp  hir_builder_self_param.cpp  hir_builder_statement_lowering.cpp  hir_builder_type_lowering.cpp  hir_builder_with_constraints.cpp  hir_builder_with_methods.cpp  support.hpp
compiler/cstc_hir_interpreter/: CMakeLists.txt
compiler/cstc_hir_interpreter/include/cstc_hir_interpreter/: interpreter.hpp
compiler/cstc_hir_interpreter/src/: interpreter.cpp
compiler/cstc_hir_interpreter/tests/: hir_interpreter_materialize_const.cpp  hir_interpreter_raw_feature_coverage.cpp  hir_interpreter_run_and_repl.cpp  hir_interpreter_validate_constraints.cpp  support.hpp
compiler/cstc_inspect/: CMakeLists.txt  README.md
compiler/cstc_inspect/src/: main.cpp
compiler/cstc_interpreter/: CMakeLists.txt
compiler/cstc_interpreter/src/: main.cpp
compiler/cstc_lexer/: CMakeLists.txt  README.md
compiler/cstc_lexer/include/cstc_lexer/: chars.hpp  cursor.hpp  lexer.hpp  lexer_impl.hpp  token.hpp
compiler/cstc_lexer/src/: cursor.cpp  lexer.cpp
compiler/cstc_lexer/tests/: cursor_base.cpp  cursor_lexer.cpp  lexer_basic.cpp  lexer_tokens.cpp
compiler/cstc_lir/: CMakeLists.txt
compiler/cstc_lir/include/cstc_lir/: lir.hpp  lir_impl.hpp  printer.hpp  printer_impl.hpp
compiler/cstc_lir/tests/: lir_basic.cpp  lir_blocks.cpp  lir_instrs.cpp  lir_types.cpp  printer_basic.cpp
compiler/cstc_lir_builder/: CMakeLists.txt
compiler/cstc_lir_builder/include/cstc_lir_builder/: builder.hpp  builder_impl.hpp
compiler/cstc_lir_builder/src/: builder.cpp
compiler/cstc_lir_builder/tests/: lower_basic.cpp  lower_control_flow.cpp  lower_exprs.cpp  lower_extern.cpp  lower_fns.cpp
compiler/cstc_module/: CMakeLists.txt  README.md
compiler/cstc_module/include/cstc_module/: module.hpp
compiler/cstc_module/tests/: module_resolution.cpp
compiler/cstc_parser/: CMakeLists.txt  README.md
compiler/cstc_parser/include/cstc_parser/: diagnostics.hpp  parser.hpp  parser_impl.hpp
compiler/cstc_parser/src/: parser.cpp
compiler/cstc_parser/tests/: diagnostics.cpp  parser_basic.cpp  parser_decls.cpp  parser_errors.cpp  parser_example_md.cpp  parser_exprs.cpp  parser_extern.cpp
compiler/cstc_repl/: CMakeLists.txt  README.md
compiler/cstc_repl/include/cstc_repl/: repl.hpp
compiler/cstc_repl/src/: main.cpp  repl.cpp
compiler/cstc_repl/tests/: check_help.cmake  repl_session.cpp
compiler/cstc_span/: CMakeLists.txt  README.md
compiler/cstc_span/include/cstc_span/: error.hpp  registry.hpp  span.hpp
compiler/cstc_span/src/: registry.cpp
compiler/cstc_span/tests/: registry_cnt.cpp  span_basic.cpp  span_sourcemap.cpp
compiler/cstc_symbol/: CMakeLists.txt  README.md
compiler/cstc_symbol/include/cstc_symbol/: symbol.hpp
compiler/cstc_symbol/tests/: symbol_basic.cpp  symbol_interning.cpp
compiler/cstc_tyir/: CMakeLists.txt  README.md
compiler/cstc_tyir/include/cstc_tyir/: instantiation.hpp  printer.hpp  printer_impl.hpp  tyir.hpp  type_compat.hpp
compiler/cstc_tyir/tests/: tyir_basic.cpp  tyir_print.cpp  type_compat.cpp
compiler/cstc_tyir_builder/: CMakeLists.txt  README.md
compiler/cstc_tyir_builder/src/: builder.cpp
compiler/cstc_tyir_builder/tests/: lower_basic.cpp  lower_exprs.cpp  lower_extern.cpp
compiler/cstc_tyir_interp/: CMakeLists.txt  README.md
compiler/cstc_tyir_interp/src/: interp.cpp
compiler/cstc_tyir_interp/tests/: folding.cpp
compiler/src/entrypoint/: main.cpp
libraries/: CMakeLists.txt  README.md
libraries/cstc_ansi_color/: CMakeLists.txt  README.md
libraries/cstc_ansi_color/tests/: ansi_color.cpp
libraries/cstc_end_to_end/: CMakeLists.txt
libraries/cstc_end_to_end/src/: end_to_end.cpp
libraries/cstc_error_report/: CMakeLists.txt  README.md
libraries/cstc_error_report/src/: report.cpp
libraries/cstc_error_report/tests/: report_render.cpp
libraries/cstc_resource_path/: CMakeLists.txt  README.md
libraries/cstc_resource_path/src/: resource_path.cpp
libraries/cstc_resource_path/tests/: resource_path.cpp
libraries/std/: README.md  prelude.cst  runtime.c
libraries/std/tests/: runtime_concat.cpp  runtime_external_io.cpp  runtime_print.cpp
test/e2e/: CMakeLists.txt  run_e2e.cmake  runner.cpp
(+122 files in other folders)
