add_subdirectory(cstc_symbol)
add_subdirectory(cstc_span)
add_subdirectory(cstc_ast)
add_subdirectory(cstc_lexer)
add_subdirectory(cstc_parser)
add_subdirectory(cstc_tyir)
add_subdirectory(cstc_tyir_builder)
add_subdirectory(cstc_lir)
add_subdirectory(cstc_lir_builder)
add_subdirectory(cstc_codegen)
add_subdirectory(cstc_inspect)
add_subdirectory(cstc)
